# md-reader

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  package-lock.json  package.json  readme.txt  register-file-assoc.reg  unregister-file-assoc.reg  vite.config.js  软件使用说明.txt
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
