[package]
name = "md-reader"
version = "1.4.0"
description = "一个使用 Rust 和 Tauri 构建的 Markdown 文件阅读和编辑器，支持GitHub Flavored Markdown扩展"
authors = ["WIND"]
edition = "2021"

[[bin]]
name = "md-reader"
path = "src/main.rs"

[lib]
name = "md_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
